# HandleEnum

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  HandleEnum  Makefile  cli_parser_tests  cmake_install.cmake
include/: app.hpp  cli_parser.hpp  filters.hpp  nt.hpp  printer.hpp  string_utils.hpp  types.hpp
src/: app.cpp  cli_parser.cpp  filters.cpp  main.cpp  nt.cpp  nt_query.cpp  nt_system.cpp  printer.cpp  string_utils.cpp
tests/: app_tests.cpp  cli_parser_tests.cpp  filters_tests.cpp  integration_edge_cases.ps1  nt_tests.cpp
